<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csulb.cecsymemeteam.dinnr.ForgottenLoginActivity">

    <ImageView
        android:id="@+id/forgottenLogin_bgColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@color/DinnrBlue"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="4dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/forgottenLogin_titleImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/forgottenLogin_userTxtField"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="21dp"
            android:adjustViewBounds="false"
            android:background="@color/DinnrBlue"
            android:cropToPadding="true"
            android:scaleX=".7"
            android:scaleY=".7"
            app:srcCompat="@drawable/dinnr_title"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="157dp" />

        <EditText
            android:id="@+id/forgottenLogin_userTxtField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="234dp" />

        <TextView
            android:id="@+id/forgottenLogin_forgotUsernameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/forgottenLogin_userTxtField"
            android:layout_below="@+id/forgottenLogin_userTxtField"
            android:text="@string/forgot_username"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="274dp" />

        <Button
            android:id="@+id/forgottenLogin_sendUsernameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/forgottenLogin_userTxtField"
            android:layout_below="@+id/forgottenLogin_userTxtField"
            android:text="@string/send"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="271dp" />

        <EditText
            android:id="@+id/forgottenLogin_passwordTxtField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/forgottenLogin_sendUsernameBtn"
            android:layout_below="@+id/forgottenLogin_sendUsernameBtn"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="319dp" />

        <TextView
            android:id="@+id/forgottenLogin_forgotPasswordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/forgottenLogin_forgotUsernameTxt"
            android:layout_below="@+id/forgottenLogin_passwordTxtField"
            android:text="@string/forgot_password"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="356dp" />

        <Button
            android:id="@+id/forgottenLogin_sendPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/forgottenLogin_passwordTxtField"
            android:layout_below="@+id/forgottenLogin_passwordTxtField"
            android:text="@string/send"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="351dp" />

        <Button
            android:id="@+id/forgottenLogin_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="21dp"
            android:layout_marginEnd="33dp"
            android:onClick="goBack"
            android:text="@string/back"
            tools:layout_editor_absoluteX="278dp"
            tools:layout_editor_absoluteY="501dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
