<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csulb.cecsymemeteam.dinnr.WriteReviewActivity">

    <ImageView
        android:id="@+id/writeReview_bgColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@color/MintCream"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/writeReview_reviewTxtField"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/writeReview_titleTxtField"
            android:layout_below="@+id/writeReview_titleTxtField"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="62dp" />

        <EditText
            android:id="@+id/writeReview_titleTxtField"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/review_title"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/writeReview_maxCharactersTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/writeReview_titleTxtField"
            android:layout_below="@+id/writeReview_reviewTxtField"
            android:text="@string/max_chars" />

        <Button
            android:id="@+id/writeReview_sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/writeReview_reviewTxtField"
            android:layout_below="@+id/writeReview_reviewTxtField"
            android:onClick="sendReview"
            android:text="@string/send"
            tools:layout_editor_absoluteX="278dp"
            tools:layout_editor_absoluteY="501dp" />

        <Button
            android:id="@+id/writeReview_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/writeReview_sendBtn"
            android:layout_alignBottom="@+id/writeReview_sendBtn"
            android:layout_toStartOf="@+id/writeReview_sendBtn"
            android:onClick="goBack"
            android:text="@string/back"
            tools:layout_editor_absoluteX="188dp"
            tools:layout_editor_absoluteY="501dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
