<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csulb.cecsymemeteam.dinnr.SettingsActivity">

    <ImageView
        android:id="@+id/settings_bgColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@color/MintCream"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settings_settingsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp" />


        <ImageButton
            android:id="@+id/settings_settingsBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignBottom="@+id/settings_settingsTxt"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="17dp"
            android:background="@android:color/transparent"
            android:onClick="goBack"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/menu_icon"
            tools:layout_editor_absoluteX="320dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageView
            android:id="@+id/settings_barImg"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/settings_settingsTxt"
            android:layout_marginTop="11dp"
            android:scaleType="fitXY"
            app:srcCompat="@color/common_google_signin_btn_text_light_pressed"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="72dp" />

        <Button
            android:id="@+id/settings_loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/settings_settingsTxt"
            android:layout_below="@+id/settings_barImg"
            android:layout_marginTop="14dp"
            android:onClick="login"
            android:text="@string/login"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="88dp" />

        <Button
            android:id="@+id/settings_createAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/settings_loginBtn"
            android:layout_below="@+id/settings_loginBtn"
            android:layout_marginTop="18dp"
            android:onClick="createAccount"
            android:text="@string/create_account"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="145dp" />

        <Button
            android:id="@+id/settings_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/settings_settingsBtn"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="18dp"
            android:onClick="goBack"
            android:text="@string/back"
            tools:layout_editor_absoluteX="278dp"
            tools:layout_editor_absoluteY="501dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
